Pipeline/java_lang_reflect/java_lang_reflectOutputResult.txt
Sample: Array_1
----------------------------------------------------------------
stdout:
World

================================================================

Sample: Array_2
----------------------------------------------------------------
stdout:
5

================================================================

Sample: Array_3
----------------------------------------------------------------
stdout:
0
10
20
30
40

================================================================

Sample: Array_4
----------------------------------------------------------------
stdout:
Index 0: 10
Index 1: null
Index 2: null
Index 3: null
Index 4: null

================================================================

Sample: Array_5
----------------------------------------------------------------
stdout:
true

================================================================

Sample: Constructor_2
----------------------------------------------------------------
stdout:
Hello

================================================================

Sample: Constructor_3
----------------------------------------------------------------
stdout:
Hello

================================================================

Sample: Field_2
----------------------------------------------------------------
stdout:
New Value

================================================================

Sample: Field_3
----------------------------------------------------------------
stdout:
Hello

================================================================

Sample: Field_5
----------------------------------------------------------------
output:
./java_lang_reflect/javaFiles/Field_5.java:5: error: cannot find symbol
        Field field = Main.class.getDeclaredField("main");
                      ^
  symbol:   class Main
  location: class Field_5
1 error


================================================================

Sample: Proxy_1
----------------------------------------------------------------
stdout:
Calling method: add
Calling method: toString
[Hello]

stderr:
Note: ./java_lang_reflect/javaFiles/Proxy_1.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.

================================================================

